# async-wrapper

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json  ruff.toml
.github/workflows/: check.yaml  docs.yaml  lint.yaml  publish.yaml
src/async_wrapper/: __init__.py  exception.py  pipe.py  queue.py  wait.py
src/async_wrapper/convert/: _async.py  _sync.py  abc.py  main.py
src/async_wrapper/convert/_sync/: main.py  sqlalchemy.py
src/async_wrapper/convert/asynclib/: _greenletio.py  _joblib.py  main.py
src/async_wrapper/convert/synclib/: _greenletio.py  _joblib.py  base.py  main.py
src/async_wrapper/task_group/: __init__.py  _anyio.py  _asyncio.py  anyio.py  asyncio.py  base.py  future.py  main.py  task_group.py  value.py
src/async_wrapper/taskgroup/: __init__.py  _anyio.py  _asyncio.py  base.py  main.py
src/async_wrapper/utils/: queue.py  wait.py
src/docs/: conf.py  index.rst  requirements.txt
src/docs/api/: convert.md  exception.md  pipe.md  queue.md  task_group.md  wait.md
src/docs/async_wrapper/: convert.rst  exception.rst  index.rst  pipe.rst  queue.rst  task_group.rst  wait.rst
src/tests/: test_pipe.py  test_queue.py
src/tests/convert/: test_async.py  test_sync.py  test_toggle.py
src/tests/task_group/: test_task_group.py
tests/: base.py  conftest.py  test_pipe.py  test_queue.py  test_wait.py
tests/convert/: base.py  test_async.py  test_sync.py  test_toggle.py
tests/convert/asynclib/: base.py  test_joblib.py  test_loky.py  test_thread.py
tests/convert/synclib/: base.py  test_joblib.py  test_loky.py  test_thread.py
tests/task_group/: base.py  test_anyio.py  test_asyncio.py  test_future.py  test_task_group.py  test_value.py
tests/utils/: test_queue.py  test_wait.py
