[project]
name = "async-wrapper"
dynamic = ["version"]
description = "async wrapper"
authors = [{ name = "phi", email = "phi.friday@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Framework :: AnyIO",
    "Framework :: AsyncIO",
    "Framework :: Trio",
]
requires-python = ">= 3.9"
dependencies = [
    "typing-extensions>=4.4.0",
    "anyio>=4.0.0",
    "sniffio>=1.3.1",
    "exceptiongroup; python_version < '3.11'",
]

[project.urls]
Documentation = "https://async-wrapper.readthedocs.io/"
Repository = "https://github.com/phi-friday/async-wrapper"

[project.optional-dependencies]
uvloop = ["uvloop; platform_system != 'Windows'"]
sqlalchemy = ["sqlalchemy[asyncio]", "greenlet"]

[dependency-groups]
test = [
    "pytest>=8.0.0",
    "trio>=0.24.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
    "pytest-xdist>=3.6.1",
]
dev = [
    { include-group = "test"},
    "ruff==0.7.1",
    "ipykernel>=6.29.0",
    "pre-commit>=3.5.0",
    "poethepoet>=0.27.0",
    "async_wrapper[uvloop,sqlalchemy]",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.42",
    "mkdocstrings[python]>=0.26.2",
    "black>=24.10.0",
]

[tool.uv]
managed = true
default-groups = ["dev"]

[tool.poe.tasks]
lint = ["_lint:check", "_lint:format"]
check = "pre-commit run --all-files --show-diff-on-failure"
"_lint:check" = "ruff check src --fix"
"_lint:format" = "ruff format src"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/async_wrapper"]

[tool.hatch.build.targets.sdist]
include = ["src/async_wrapper"]

[tool.pytest.ini_options]
addopts = "-n 4 --cov=src/async_wrapper --cov-report html --cov-report=xml"
testpaths = ["src/tests"]

[tool.coverage.run]
omit = ["./src/tests/**/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
